fixes of alignments and paddings for market overview mobile

--- a/src/pages/Options/Home/ExploreMarkets/media.scss
+++ b/src/pages/Options/Home/ExploreMarkets/media.scss
@@ -24,7 +24,7 @@
     }
 
     &__search {
-        margin: 20px 0px !important;
+        margin: 20px 0px 9px !important;
         & > input {
             width: 100%;
         }
