--- a/src/pages/Options/Home/HotMarkets/media.scss
+++ b/src/pages/Options/Home/HotMarkets/media.scss
@@ -52,6 +52,7 @@
 
         &__title {
             font-size: 31px;
+            padding-left: 37px;
         }
 
         &__card:first-child > div {
